# ai-career-toolkit

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-cli.yml  shell-scripts.yml
agents/: career-guide.md  interview-prep-coach.md  research-guru.md  wordsmith-editor.md
ai_career_toolkit/: __init__.py  cli.py  materialize.py  paths.py  scaffold.py  ui.py
ai_career_toolkit/commands/: init_cmd.py  personalize_cmd.py  verify_cmd.py
config.example/: role-thesis.md  settings.yaml  target-companies.tsv
config.example/voice-pack/: README.md  examples.md  first-pass-profile.md  rulebook.md
docs/: CONTRIBUTING.md  GETTING_STARTED.md  customization-guide.md  playbook.md
docs/planning/: TEMP-onboarding-and-roadmap-snapshot.md
rules/: job-artifact-privacy.mdc  job-writing-quality.mdc
scripts/: install.sh
skills/content-review/: SKILL.md
skills/hm-review/: SKILL.md
skills/in-my-voice/: SKILL.md
skills/interview-prep/: SKILL.md
skills/mock-interview-loop/: SKILL.md
skills/opportunity-evaluator/: SKILL.md
skills/resume-bootstrap/: SKILL.md
skills/social-content/: SKILL.md
skills/star-story/: SKILL.md
skills/target-list-generator/: SKILL.md
skills/tech-content-review/: SKILL.md
templates/: ai-leverage-case-sheet.md  cover-letter.md  interview-story-system.md  role-expectation-rubric.md  role-thesis.md
tests/: test_cli_help.py  test_paths.py  test_scaffold.py  test_verify.py
workflow-docs/: company-list-pipeline.md  operating-workflow.md  pipeline-stages.md
